--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-onar.projectKey=docker.test
+sonar.projectKey=docker.test
 sonar.projectName=Docker-Test
 sonar.projectVersion=1.0
 sonar.language=js
